; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_memhotplug.c_acpi_memory_device_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_memhotplug.c_acpi_memory_device_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }
%struct.acpi_memory_device = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*, i32)* @acpi_memory_device_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_memory_device_remove(%struct.acpi_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.acpi_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.acpi_memory_device*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.acpi_memory_device* null, %struct.acpi_memory_device** %6, align 8
  %7 = load %struct.acpi_device*, %struct.acpi_device** %4, align 8
  %8 = icmp ne %struct.acpi_device* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.acpi_device*, %struct.acpi_device** %4, align 8
  %11 = call %struct.acpi_memory_device* @acpi_driver_data(%struct.acpi_device* %10)
  %12 = icmp ne %struct.acpi_memory_device* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %9, %2
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %9
  %17 = load %struct.acpi_device*, %struct.acpi_device** %4, align 8
  %18 = call %struct.acpi_memory_device* @acpi_driver_data(%struct.acpi_device* %17)
  store %struct.acpi_memory_device* %18, %struct.acpi_memory_device** %6, align 8
  %19 = load %struct.acpi_memory_device*, %struct.acpi_memory_device** %6, align 8
  %20 = call i32 @kfree(%struct.acpi_memory_device* %19)
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %13
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.acpi_memory_device* @acpi_driver_data(%struct.acpi_device*) #1

declare dso_local i32 @kfree(%struct.acpi_memory_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
